Execute repo generation script in renderer process

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Hello World!</title>
   </head>
   <body>
+    <script type="text/javascript" src="test.js"></script>
     <h1>Hello World!</h1>
     We are using node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
