--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <script type="text/javascript" src="test.js"></script>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    
+    <div id="level">
+      {{ message }}
+    </div>
+
+
+    <script type="text/javascript" src="./lib/render-level.js"></script>
   </body>
 </html>
