Add example assets

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="playground/static/level.css">
+    <link rel="stylesheet" type="text/css" href="example/static/level.css">
     <title>Hello World!</title>
   </head>
   <body>
