--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <script src="http://localhost:8098"></script>
     <link rel="stylesheet" type="text/css" href="example/static/level.css">
     <title>Hello World!</title>
   </head>
@@ -13,6 +14,7 @@
           v-bind:is="step.componentType"
           v-for="(step, key) in steps"
           v-bind:stepsKey="step.key"
+          v-bind:key="`level-step-${step.key}`"
         ></li>
       </ul>
     </div>
