Remove unused ul

--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
   <body>
     
     <div id="level">
-      <ul v-if="state.stepsReady">
-        <li
+        <div
           v-for="(renderStep, key) in renderSteps"
           v-bind:is="renderStep.step.componentType"
           v-bind:steps-key="key"
           v-bind:key="`level-step-${key}`"
         ></li>
-      </ul>
     </div>
 
 
