Nake InstructStep renderable; Assign type attribute to script in index.html to suppress vue compilation error

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 
 
     <!-- <script type="text/javascript" src="./lib/render-level.js"></script> -->
-    <script>require('./lib/render-level.js');</script>
+    <script type="application/javascript">require('./lib/render-level.js');</script>
   </body>
 </html>
