Matches for {{ id_with_stpace }}

--- a/example/resources/assets/description_illustrate_example.html
+++ b/example/resources/assets/description_illustrate_example.html
@@ -1,4 +1,5 @@
-<img src={{images/illustrate_illustrate}}></img>
+<img src="{{ images/illustrate_illustrate }}"></img>
 <p>
 這是一個關於圖解步驟的簡單範例。
+示範了將 "iamges/illustrate_illustrate" 這一代號所指涉的字串 "${{ images/illustrate_illustrate }}" 代換成目標路徑 "{{ images/illustrate_illustrate }}"
 </p>
