--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     
     <div id="level">
         <div
-          v-for="(renderStep, key) in renderSteps"
-          v-bind:is="renderStep.step.componentType"
-          v-bind:steps-key="key"
-          v-bind:key="`level-step-${key}`"
+          v-for="(stepKey) in renderSteps"
+          v-bind:is="stepStates[stepKey].step.componentType"
+          v-bind:step-key="stepKey"
+          v-bind:key="`level-step-${stepKey}`"
         ></li>
     </div>
 
