Change to use new API of AssetLoader

--- a/example/resources/assets/description_illustrate_example.html
+++ b/example/resources/assets/description_illustrate_example.html
@@ -1,8 +1,8 @@
 <img src="{{ images/illustrate_illustrate }}"></img>
 <p>
     這是一個關於圖解步驟的簡單範例。<br>
-    示範了將 "\{\{ iamges/illustrate_illustrate \}\}" 代換成目標路徑 "{{ images/illustrate_illustrate }}"<br>
-    如果使用 "$\{\{ images/illustrate_illustrate \}\}" 將會得到相對路徑 "${{images/illustrate_illustrate}}"
+    示範了將 "\{\{ iamges/illustrate_illustrate \}\}" 代換成相對路徑 "{{ images/illustrate_illustrate }}"<br>
+    如果使用 "$\{\{ images/illustrate_illustrate \}\}" 將會得到素材的內容本身(此處因為素材是圖片就略過示範)"
 </p>
 <p>
     如果想要跳脫地輸入 "\{\{\}\}" 的符號，必須在 "{" 前加入跳脫字元 "\"，例如<br>
