--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <script src="http://localhost:8098"></script>
     <link rel="stylesheet" type="text/css" href="example/static/level.css">
-    <title>Hello World!</title>
+    <title>intergitive</title>
   </head>
   <body>
     
