--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     
-    <div id="level" class="level" v-bind:non-interactable="!state.interactable">
+    <div id="level" class="level" v-bind:non-interactable="!levelState.interactable">
         <div
           v-for="(stepKey) in renderSteps"
           is="blockable"
