--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <script src="http://localhost:8098"></script>
-    <link rel="stylesheet" type="text/css" href="example/static/level.css">
+    <link rel="stylesheet" type="text/css" href="static/css/level.css">
     <title>intergitive</title>
   </head>
   <body>
