--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div id="main"></div>
 
     <!-- <script type="text/javascript" src="./lib/render-level.js"></script> -->
-    <script type="application/javascript">require('./lib/render-level.js');</script>
+    <script type="application/javascript">require('./src/render-level.js');</script>
   </body>
 </html>
