Include javascript directly in index.html instead of require it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div id="main"></div>
 
-    <!-- <script type="text/javascript" src="./lib/render-level.js"></script> -->
-    <script type="application/javascript">require('./render-level.js');</script>
+    <script type="text/javascript" src="./render-level.js"></script>
+    <!-- <script type="application/javascript">require('./render-level.js');</script> -->
   </body>
 </html>
