--- a/src/index_template.html
+++ b/src/index_template.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <% if (debug === true) { %>
     <script src="http://localhost:8098"></script>
+    <% } %>
     <link rel="stylesheet" type="text/css" href="static/css/level.css">
     <title>intergitive</title>
   </head>
